Removed --illegal-access=permit option
jOOR doesn't require it; not needing that option
allows deleting of most IDE-specific config.